--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Yvai01nQ,iv:WgHAuYuENVrGghmcaIvwMSBgHQqYnO2Jhf0QQGnzL/Y=,tag:qOQKvMH5pyIsf9p/icL2ew==,type:str]
-ansible_user: ENC[AES256_GCM,data:hUiCHdz7,iv:KYORdfnCMo3vcCLZzJlipY7Niivs4QRsACaBx+Nx9XM=,tag:84l/W+Miu4E15xsvk476ig==,type:str]
+kind: ENC[AES256_GCM,data:qbRN+GVY,iv:80b5lT+1wQdmFI2ifjGMMRrF4hDVDeAJH8UhMs99UrY=,tag:I2SpOMthNxNDnggO+xfC0w==,type:str]
+ansible_user: ENC[AES256_GCM,data:xpD00rB6,iv:lhXb8JNwlpfPhz35aPvN9QDtXEcFtPkLyc1TorLOQnY=,tag:TuodJ9t2/Kobi8IRDsWNXA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvOElJWExDQ003NG14ZVJj
-            LzZnQ3loMVlHUXNJNGtHbks2MFY4YWxJRWhBClg4RkZLWTgzZTJOV2ZRUlBtbVdE
-            d2VSYStDeXllTEg1Q1NVN3Jjb25QMTAKLS0tIHdQREk1WERrYy8vbXRzWkE2MXZD
-            MlpyR1lQTlZUazNKMlJRdml2SEJ0Y0EK05DtIqwvXk3irLYDI+RPimINLtlpx/ZW
-            sQC0VE4vNFp1hi0m76KW7ZeY3QjXlAH/J1a3J7g9bNkd4+AO3Jx5XQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Q1NzN3owblZKam9mQlEv
+            c2FDRW9CYVpQV1hYQlZlUFpDZ2R6b1RlT25rCjIrU2lMQks0ZWdxSk5JRE5qWDhY
+            QW1PSE1idW1jb082c2RtckNhTWZLazgKLS0tIFJ0MG9teVAxOUxpNzV4Q2NrQzBr
+            TWNiMHZyeHEvUFNwY0VseWdOenFxU1EKBgmqAyEoGoKhvWHTRtiZEveLaohH0rvf
+            TcbcbDGKAN06jYlDQNIu5kfaneN2Et1D+wadRPpiyzOo7GKZgupOQA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:35:11Z"
-    mac: ENC[AES256_GCM,data:tc4FHDAr0IRlCb/42cD4uCgIj4kWIKyOFbIa4/8afUPoxG7aF2F4DehfKTt4lcd81NbjF3NWg0qMcZ+yUYvkaoIAlDrSBEaYNb39EwCbvJaO+iQUoZzW2i3PVjhwIgiiAPt+XrvOhg9Xj5ZlMl+09fxgO+RRdhAyzm53ALdowZ0=,iv:4ER1QrDxGQbm5tovXkfiHjsx8UXZrlnbUifASY5JlKQ=,tag:5VL2tzy27kxqVPVNIj9h6w==,type:str]
+    lastmodified: "2023-02-18T17:19:40Z"
+    mac: ENC[AES256_GCM,data:T5qD0xPfyHPzwJsB5/igTXJ2tMPDeKc6BLqxKFkZtuRzY/NC2KBgv808lUKQ4CogLch+hysZStcciyCstEMO1jKJ72LYFiqSYXdhj4CpcxC5FZq/G3X6ahHRqi2zbqeVegmA3IGRyQZMOrBNZx5SwsMBLJ2m2/INPsJW5kg+aF8=,iv:veK0XYRWEefn6m+yNf82zhpSHEA93EKfgRcI0IJ32xA=,tag:vd6U9pGMgEEZjcXX4chSqQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
