--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:nZy4ggnZ,iv:8LzWP96zBrGYiPtVH9EGwe3oFOnH0NH5TU49JmGIXII=,tag:SLpMI6JFie/pojtgrDBWZA==,type:str]
-ansible_user: ENC[AES256_GCM,data:uRHlHXfw,iv:yWSz/jopqdHvLCevmxUpcFLfb7+7PZnJh27qjsXQbdQ=,tag:jR5B96Fom9Obe3vPl/6xVg==,type:str]
+kind: ENC[AES256_GCM,data:gX9NKjR/,iv:gmN1j7XEjnNjQgpfeZPlgroSIYHYdfLpHMlx1wTQvDg=,tag:0oPcNjssmoGZbm1mMjof0g==,type:str]
+ansible_user: ENC[AES256_GCM,data:daO2ntm5,iv:oKfyv+qAozAWSb3ZdMBHQvb3tWbUW5V13FR5krhbztg=,tag:MosCDCrYxy/1ebHNXNENWg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBScWNLUHQvL0t0dWJOckJ0
-            RTIwNWNWM0tnc2RGYXZ0ZU94TWdHcjRGRmpBCm13TnBXak1SYXZveVNPdUgxQ0RN
-            c2lmR1BueDY5cE1tMzMwM0JPcXNyNWcKLS0tIEhFV1VyUTBBbExPVFR4M08zZk5s
-            L2FFMm52SFhxRk5henk3U0tubm1QRlkKCAtBngP0LxRgGRMTZyngDbeT1ZPD3Wwp
-            29HfG5oe32Tb7OO5g6xJ+zYrm+lLCTTNslLz+nYHmIIUBADeQANocA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2bjcrMGhNNnMxQ2M4bmZC
+            WFFtcmpwdy9DcWt6ZytPOUFzdUJaNVE1anprCjgvZmZ1ajFndno3TTdNMUZKdkg2
+            UkR0S3EvM05ZUDlFaE9sajEyemoxWGMKLS0tIC9aZXBmTnIxUE5JM1VBYnRwTHNz
+            OXVWRmtUNVh3MkF1UW5HZGxHYUcxNHMK9Gf6n8gUxgm5nW7SllMT+Wo0G2y9WtyJ
+            Pf041QodUY6NqGAodFyottZe+Nr77JUdNiXghSM9l45BDc2yHEn7aA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:35:11Z"
-    mac: ENC[AES256_GCM,data:/EI4vpJb+xbu9ckCpkS6ahP6LfMvxsuJQYBiz95eaBdD0JYBLythQxD6qh1CBSigFCL3cYMSjmqy84oTYP/pGh2cO18ednRlayL3Mof1ymN//+fzGVwOqikAIV2vxBTi17NW3IBh6Xb+YVGG0BzDkGxZamCNQnc2jkfqaloHhpQ=,iv:n4ZZgOrasJUbeEjCw5Zx19RrixCmqimazXwGckGtE+0=,tag:HJ7aE2wSd+7iy0a5G28/BA==,type:str]
+    lastmodified: "2023-02-18T17:19:40Z"
+    mac: ENC[AES256_GCM,data:JLq49nIizDBIka1A8yjOCjcYkV1oRft8v30W5kFBW1M1WpcyiK5Qz0PlO2wIKAZe848zmFdhVkbZPWthRyRQrBE2lvZRcIDXKShGhJEQqAzTpFKSUz1v/r9IxXtk11pjX6yHFQ3vgqaOK+1ZjIlwasXW3kGzrNSdHsfMMGeU5xw=,iv:VA2Nqs9WxNtKqS8IPI2LQDkA0GDyLDq8vLYk5HLfcNg=,tag:SqniCYYhh9V93G+86prAcg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
