--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:WaXiVKhJ,iv:nyzu2Co6tX8jLWW/9IKGr1MoIEIJdsynYYaMydk9zUA=,tag:HcbFODMpKUCTc3UEK8MGcA==,type:str]
-ansible_user: ENC[AES256_GCM,data:0mphOGzp,iv:FK6HabbFX8wp+s8qWT5NtliHIaKQqMJLAwgPnv56yag=,tag:2VQK71ytj8Rz/v0uaU63pg==,type:str]
+kind: ENC[AES256_GCM,data:cCeFlmXv,iv:gERaKiUlV6CxbC9y6SmpdINlq/ocL09LB3MCcZkdqCE=,tag:ob8OKhXaxSS+P/XyGnibyg==,type:str]
+ansible_user: ENC[AES256_GCM,data:JkqIN7vt,iv:wBthtCqFrnQjzDWRY/CT3selLUq7sOM4DFTfsfiwdHQ=,tag:kTPYgXGq5NBeRfOyxXPErw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkQzFhaWw5azdDY0MzRjFH
-            SW1wNEI0RWhWU3JJZFkzUDI1RkwxVkxYMVdvCmlrMkRQL2lxZ09pSk1tNTIrRGlV
-            QlhGZzFtdTQ2QUNkWWc2OEkwcGZicmcKLS0tIEw2bVZuVjRyclNwOGlrUWVkNWQ5
-            RzREcUdSeXo5NVovN2VrdFR3STFCZlUKfo5ks8mc8hxZBRtQjl6ajQSkKnpyOT2P
-            ZnI7oQS24rq7WMVlimoVaM+t3IfjOneUA5mebXWSRUZ9C6p7RVejuw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIT0FMMFh5R2wxK2c5Z3Zy
+            M2s0Qk9zMGhrLzg3RWhBb2ZJWHpHMFdOYkVjClV0bGVLVGsxcE5HTlp2OVNxbmxJ
+            U1R2N0s5ZkcxamUxUmh3T3ovVElEaGcKLS0tIDNYZEhnbzZydFpXMHBZbzNtN0lN
+            Z2pZM0x4UjR5Q280eUdzWmx0aFl3a0kKMeFOk7g0zwbMuI49KIsM27Pwdhbm51ed
+            0fmE89FV7B3AHYWSj0M8B1nRHyvVGEAZcOEIf8GzG9DIHyQTws5o1Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:35:11Z"
-    mac: ENC[AES256_GCM,data:G2GmK3Wam1HsQVUzfOT0uUI0x09isEKz4FCxlfVbrs7j58V6G4PR95FOyP7us9RHLdEKc2AfP4KVgcfd3Zs7kJkrgiUpYqSU5roD7W4YdOXZJoMWo/Y0RKuZWgF2Cgo2Qc8V3NUkgG4Z0Er2L8dcGxSpbT/+1XdPmT1RurpTXqw=,iv:+I79rcFAEKcsDpB1k7SRyKX3fmPkf53wnm77P5SP/n4=,tag:nP6VULLAGL/9KcngIuByVw==,type:str]
+    lastmodified: "2023-02-18T17:19:40Z"
+    mac: ENC[AES256_GCM,data:Hogp86J16l7AAYbXI6thQ7oIxOInY2S5S1sQlYbUVBq+cu6yzO1XoZl2wgBuaWJk7G6QMV5efYClGAb35J/iaQi1LXT+CHzHdGcrR6Xfo6ZD9ruNNxdIix+5zTZcqx+4TcXqTuOTQI8GJIHYBz7ef1TxDIFOwBzo3Ca7REpuktw=,iv:hxls2EaA6hy4Z4QiF2kJo8NkdV9x2ctixWt7dRayWN8=,tag:3u4iKUedH67eTDY84K9k1Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
