--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:F+uexRbg,iv:tamGl63AE3b+DGM3j2OcKbLLGHiu7o1bfmcZdSRCTQI=,tag:qDLYeIpq0HYTSgE+VozvCQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:Pesy9m3P,iv:7rVlXTkbBFxAEi9aoHbau1VEcGxw+cd7LvZFf1rt25Y=,tag:TTAEc6hCVDqAOalu4kv3Dw==,type:str]
+kind: ENC[AES256_GCM,data:WvulWP65,iv:Lz/xAISfga0heljlW8xo4qYXl8TxQ81pXaQpUz0qVVg=,tag:6kC+VR2qpLZ/eJguMz/Wfw==,type:str]
+ansible_user: ENC[AES256_GCM,data:KNCFzkXT,iv:+9j9yZxGJxXLOuZnaRrUTZ0yM5bKhVvE+hy2nqdv7EQ=,tag:+LDgIgmYMkgNQyKN/Fv8cw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWV1k4RUVjM1oxdFBaVmdG
-            M01jZ3dUZVZpNWNCT2JiOXhwcmtrc0hyRVc4CjVQOWNDSGZZeFNNdkxOd0VDN20r
-            aTJ5N0pWUzFBdHR2OC9OZHh6V25BN2cKLS0tIC9YeU5pblFXMDVmY2NaRFZHT2dR
-            UG9UVGJkU2dNa2U1ZkZDSm1XNzBtOGMKm9Z86DFPsBttD7iPVYcNwz+CMk7PU8xD
-            VOKbDjMdz5Q7QbP6OWGX05TKEZodXyCeEHsQffeaWM5xADVYzvBFwg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhY1gxeXhrc2RKTkZrYk5N
+            UnRNNjI0a2VTak9LN05WeXF0NDBWWW1oVnhjCjFtdmZPTWNjOTdMVnJmd3pyRlpa
+            dk1STUsxSGhXcDUzc0dxWGVkTmRBOHcKLS0tIDZSMlN0MWk3TDVXOHduU1Vwb05Y
+            YVdtRDhBVzVEQjRtVG1pQUpDSTl5MFkKVMWYdEMjhdu7CLqSMbFkYSUmB8y8PhM6
+            yMUJSRbYgzMlubPBIOtk72be2M9H9GVZKHVjnZOO9z4I4XbXRxYHzg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:35:11Z"
-    mac: ENC[AES256_GCM,data:mGIrOFFasDRr3PX+0GX+O2oacr440Pgy1SSaYLuVQ4zzuzxS/UdVzqNtsyfTI3DfPZPSaPsSaRQ4fVwIxNRNhSyaRFXloHSnk57PokhOFzIpuX5K5ULa4iW/sMDi59HKpx4pzwsdN2rEWBStvH4bCBFvfjPCkHTEsYJr/mqodEo=,iv:VisWapPvHAa72FqTVUaCdId1mPT2b0kIO3ZC5K20EeE=,tag:ccjyXoQlYe60jvJHAfafpw==,type:str]
+    lastmodified: "2023-02-18T17:19:40Z"
+    mac: ENC[AES256_GCM,data:hZc775oZfBfUrxVR9l8bQdJT/MwFn+k4kHwUm0iLCWZQ9PMjfPMiE4KWYML5nX5yzeqcQAGS8Jbp5IhiBE+wQ1NvVCh4pGAxj9W/AtWQEfc6RDs/IFgIUetujW9QkDlFmjqrShs01Ozy06Lcq7WGyXT9PxLHYg1I2JeV5jGtBhM=,iv:oOpWRe6iMGvoVjG4rkX1k1aER4w8fUmRJmgoK0XCJgc=,tag:H00sECBJPR8EwYtDPzYuSw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
