--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:xMgDPTpw,iv:SAv0jG2AKG/+7f4UBQVRcmQQq8ZFYfcYUWdmhHIxF8g=,tag:7bCKMiRy+0S0xw80yqw7nw==,type:str]
-ansible_user: ENC[AES256_GCM,data:lp9lP43Y,iv:P0g3jfPqYD1e7ak48hZn0LofmBrdXRJypjIUecbBmF8=,tag:qzQvZLwd7U/K9xRNmx4oWA==,type:str]
+kind: ENC[AES256_GCM,data:tQT1jsrU,iv:+5KqcStKkhgzmLN9Q8RxEg3+GPvxwRK1gsTzRqWCYK0=,tag:X0FuubkjVanZ/J6XwuHZsQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:1tP1wjxk,iv:961umumHQJRngoGHYnlXD7kuyWXWmK1beSP5w0Noe4s=,tag:m5hBmw2S5XScN8mnU1xUnA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWYjhUY0hvSWIwN0ZPY2ZB
-            c0xKNWVndXdlL041NGd4R3NuT09IbTRuY1E4CmxrSmtDdndFSGtiMUJNSEpLVEtL
-            aEhmdlhnaHErK2JUZWRtT09BRERGV1UKLS0tIHNxTnplbUZkS01GSFlMWmp1WHV0
-            VW5vV2VkUEVpQ3kyZ2o1N0dJWkFjbEEKw3bQpacNay5BlQ+uhbZzKuLRYXqeRqt1
-            KQp8DLVq9PEEPtkxvecTtG0V1z9Y7DhWRKAJZoFvDsp1baHU99pXCA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNU2JpZ2dwbURlSXlQY3FB
+            SlFZU202ckVtSGZ1dGE5MkhTWHhWZXlrMlJnClNrbkpnYndLQytRR1VvRDFveS9F
+            K0lUNnpjbHMxUW15YnNqVVJhWkNmeHcKLS0tIGV6ZTJLZDNINTlvaU91YStMQ0dK
+            QmpqUEo3V1RVSXc4azRCQ1dIb09xU2MKlRjexyjNGmv4DFcyCpaPzsj7sUu5MPYT
+            yy+Vs01wXefYoFUxROmtmrwh/o6PL+edSplyDSnEdelRisS0dXCTyA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:35:11Z"
-    mac: ENC[AES256_GCM,data:U5J53WrEwACuXwY+DiR4Dy2NYPUm0kOiKhKlyk5SFt6Yk1qsbLE6RGMZLwq5K7JA9+gb3ob2UguonYP05YiCL+5l5PXJFW0GJw+wID19uUhPvf8R7M2avdg3aHbKIewY4TrqOeaDgHsgZ/a1q2mUy82i+fWg5A61/hf1W6LUStc=,iv:6+yINJPFTmNYh8YCQVCI5eyvJb5Z70z9EC+Zg0iADIE=,tag:MwMGb/IlH6m8bR6pY+TFnw==,type:str]
+    lastmodified: "2023-02-18T17:19:40Z"
+    mac: ENC[AES256_GCM,data:yMbPMvp1vCGioyfXzeqWHeznMSUJbYSiQzFMIT1OnidgbalEE98ofy+0FqgD+RYAk2ShOPx0hqAJaZ1pk7knNvjO87VMUkO0+PjSXv5e6pWrNuHYK9hOn0RkICey6iHBb02Vlgc+zwyajAhJSvjPYq04xoEo2jq1P6eWm9oVJNA=,iv:m038Hib87Zod3hjf23wITKBv3thJ8L1VQMguLgjYxS8=,tag:ZHVnqGf+8dhRRxHIP5uLcg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
