--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:SNQK5jdJ0gayJDYIY/WBsmKjmGQl,iv:w3xfkf97HDU2Y4uLnAsFEFMrvm8pG6jNtcWTzIOP7Pw=,tag:oQ7brzTtqSbe2HBlfWkKYw==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:jSrJArEBxkIgrDoOm1MJYGAEj425y3d1Zls60oURTl+lYEBkVg==,iv:0z+U7saeJSAQYwREDnIoNFhEbW6+pODT2OD9U8ZDVmk=,tag:TVsIjgKZmc2xEJcYrVUS/A==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:T2wlLXf1x8XNyQM=,iv:zlnSYrmPukoDG3i/2RMd3PJfrOhIm2l5g0sBDhu4kQ0=,tag:IWCU+whMFYz5++sHmNh0Zw==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:mrDYZynbuN54OpacZXqeNhflC8+R,iv:QRV3033rzOLzol2gcuBPS+gXi0Md0AUIbr/USNBXRNQ=,tag:2pSnb/DIAlHjR3+7McmbqQ==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:ZEJFQowK6vMKVdydtdPy45byyummeRx4TKfNOo31UVT8Yjttjg==,iv:8wKfdTqwTcmgpaJk+Wn808qtytrUZKmYYhIvXsFqxfc=,tag:M3pAW9SoMdVZ0YPskaYwHw==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:onH87M1jkPz4sBo=,iv:JKvkZtGs05T77vVG7t72b1YAPztTgMIXsQxJ0uTwBY0=,tag:P53+YVITJn5F6DcAJKiNtQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsbllmVWlkbGhrWCtEZGpJ
-            NHZXcytheWdacjJmNVhUTWtaVWpRRXNZU1ZFCnNxYXQ0NHNCWitrcnBEZkg4L0ho
-            MmlzNG1vZ3ZsWCtyM3B4dmszS085VDQKLS0tIDZvczBpais5YTFVOU1FTnRpSzNx
-            YXVNb0dua0V6N1N0MFZJUVhlZEYvajAKkInHU+aojQ3NCbmmpSLUrUqH3RpxAA3l
-            zakUzeQ42vj/qfwblfJkpxJ3OFgrg7ZzrP8hahweiXL2nSYFT0jGKA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmaTRuU1RaMXhaekhWb0NM
+            ak0rMy82RXl5ZXY5bzJ5UjRIUGs3dnJDSnp3CjhRdkJWckRDZVVCOEZPdlE0YktH
+            ejdyZ1FGbTNoYkxzYjM5Q2dwU3MwUEEKLS0tIGFWVndKU2pJZmpVajMrUFZpRkow
+            aHcrb3d6Mk50dGJzbVdHVzNJVGFGRm8KJYvwmXYqpVAbpyhvf4n9DpW6hglJz/kR
+            f+eLm0JR2BQolpfT23gaaxxwDnjIlLPyDkFgfPT+tkptmSnoxakEGQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:35:11Z"
-    mac: ENC[AES256_GCM,data:LIRniSrq76CR2jN602Nci+gPRSR7TlyTkHdO3RQOw28Y7gWpYng7Dd9XO11vKcwx6GHVRMyaD9RFnMdDf8Di+5+DMpjnevb5UAejkY/ASz6pfHfcvp/IqWU3pjHqUt0Z5ImzcyNSTb9ctvNll/f09B/Gj5BrkwTqYFmxdUHJVV4=,iv:NY7+S7he9wl4YZuZX3T5GALCDLgYV69m829O0DshId4=,tag:v+ycXIYjbzQdIKHWNc+WNQ==,type:str]
+    lastmodified: "2023-02-18T17:19:40Z"
+    mac: ENC[AES256_GCM,data:P1pwBAsmYNyvaJ2g8H9yam2/vdU6CzNOzxSrSFwZlEMxG/HNqPzBJJ27zXwUVMI7NT/XHQnn8VQKJgi3bcZsVV4eggJZuSP9prrcy2wZPauyI+FLZsptXnl9zc/ZgelAO7rNAVeQCfJpOs88qLaGvzum1tFR+bseaX6BHgv7gyI=,iv:/qDmRP67IcDMOUbsIV6BWovCu0oTGUvQwUo0MrCVX1o=,tag:O375OWpUBTDism5XiSQrCw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
