--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:dZ6XtiGNk0fqAlQ=,iv:sZORif4doAWz3Jak6xvQADrmbRPVB1Z3w1HBM1Td/Yg=,tag:fw2+DJ4y3sx5jV1qPLPM8A==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:01XN4LcLYGHZLibVdYNOjxKDjaB8,iv:KeBcjomk0ly/Z5mPkbdo8O4HW/SPaEu48PPBiXYGXek=,tag:Iygvh5899SZvA9r3m4hkVQ==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:GBf9Z01/itBs5l0mqJEisqPCj4wWXz35akzpzWkROMDjwe4Srdd0ivzmVX1JsLM8OJmMPNw+0g0u5grsNHFjLV1uuijcGuc=,iv:zkm9BbakxJMzz8w3de1jphRLOD6PlXP0vMtNuDhK/zk=,tag:f7Tm9WuatDGoW+ydFCdwbQ==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:Vb++3TPerVfk//DwUoO7X/ox/af25Q6T/XgR0jeLxk9/K9I=,iv:xsPIdCvVNuPFN5l3PlyWLrf+nMCIPP537qup6yXy750=,tag:2Gfn8PLrXGLQRtaFaDh9KQ==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:v0Xa1MM+q4RRE+PjyYot9jdyvA==,iv:kshAsmtpmnRpikHbtKwvT3aS+8RSjpeSL+l2FMXobmY=,tag:PF2SIFLDbiqYdGdhKyIPjQ==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:W7ulmKrzH2QMGPhWfXkn+Blp8djw,iv:PbgjZ0+JG4JziBe1RMwB+9f2yA89LL8/1c8wofZW804=,tag:8buQKKvFEsE7cYZV3cvmXw==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:rXVrSB7osl8=,iv:wc2pvqtffTUHmcUxOJG/UrcveUAvIPJrzmxzTuT33Ac=,tag:5bwfI2qG2qsKpAGbYmxoKg==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:dxtT7Hbzkpw=,iv:G3HXpL3+vTruNL6egxu9JDARtwOb4AYjruzsvN+vkYk=,tag:wIw+uKloeld7iHGWRv6pLA==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:A5J5W35uv6rSGaQquvXq2VIlnu1UJ2uA7aqwr2WN0/2MYuum1TjUTbEsLYacK0gg4Cwh1TTsyAwm2r1JVlBbFg==,iv:LY8MRNfkZTCEVEQACVXIvM+bjsN9juHe67Fy1gOQZDQ=,tag:fO7tZn4OAquvERkXEW/FcA==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:eV8nS6HFFugcA2n84zjy2xLJJRD87m7E6dbEDS72zJ2ygKRuvdBGz7Bzl7wKT+GV/NegOWwZ//zwKo33gvTtaQ==,iv:eruWA3UEkhHKgZCO19ywjiFv2w6OQWobJYq+l9TFU5c=,tag:FzYZU0XXyJo7WpW0zK48PQ==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:S704hP5tMOp/,iv:CusYvvVE0ug9shIz7HGxpNaZEb83Dwa3a0eKoTpJsaM=,tag:JS55JTFZ5pvs2aUmPr3grg==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:G3dDnDAXlKQBew0RpoUT,iv:t8lr4AUBdbKwaQIQKvVTvdoThJ/3XszJDjPULZRphy0=,tag:zKJ2ilUZIQNM7EA1Bwj32g==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:T1wSMSzLfRC+EOXz30sgwzvpf1mq3YhTyLaCZVWl47Qgz/0i21kP1pmiG6cKCzkrUro=,iv:zFRH7sakVxaP7Yx7P+wv/+CUHNqWju+J36GqjfAqRkE=,tag:IeswO/ot4qYHC3y+P4jmLg==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:3l9u7S4Q2Y+hC1oZbts=,iv:DAuDER2veB7snp4/qiiD7osaYBjRUl5BpaPp0ZiIcac=,tag:U3y0aqIQmJ39WL9zBKIiTw==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:tLWZvcU8nIsEIBRUU6rN0hOqfow=,iv:YukwwFBmLcp+kCMAIBnUXsOMNgpVCSaPhtWusV6T0YE=,tag:kYas3T3cITmlYlkopYaiKw==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:C+Cse4GrnQc=,iv:iG4Rk2PDO5QwDwd8u4Xlh+Sl+sBgsLYPRwqXhcev7LQ=,tag:KFnsEoP1skwxhlgBWY4icQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:2BsgESt2aCzHHQ67,iv:d/tCNIknhvNnOIynp9RvCBDkJifUNcJvbVfrV1KcT90=,tag:IT6Xhp+lXeHnmOSPrd+5Xw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:tehrWE8gQZ1p,iv:4YbaoaUlOQmMMKHVMMnQl8jy7v1B6XnUDCw6MpHSxUs=,tag:fcVU8ztVWeannFpqBVukCA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:GstfhbwOKG1U,iv:CO8xg+o1+Mm0dGXqnY268P7a1MuhU8nUsQ+O/zj0/k0=,tag:gZBXOdWX0s7D3RjRklOasg==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:HivHmd+uNA==,iv:J47pgiC2VwkEcuklzk7ofNiUgQcDd695It8ukcXTWwU=,tag:lqfpfogSSokIhDjVG2s4gg==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:txf0menYAy2m,iv:y0c9JMmZ6CEm0PHYVu3usqML32nTpzrGp1YzriX1lag=,tag:xEL8EkYbL7KT9glcOOfSPQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:cyx4jbbb4OH0V4o=,iv:zlIyeZqkJ3FJRez4Y33nIrONwPDO3IBL8eZRbiB+oI4=,tag:13Jw9SekEpCwkXvtoyg+Ig==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:8P6WpQ3l9KsO6CCfdha6TWZ24/ji,iv:GsPwnikg9cbv9qUkVLTPeWVU4rukjpPu8X2vj8bNb2Y=,tag:6AmzyTIfjVmS1DepLtB5OA==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:KWMiiNmAHsXvvV+/rP3VvO6FS2QvlvJGsRck4zZt9oCYJg703VP8xqn35+TjYotyluc/tG0psq9C4Nsu7N2ULcQpRteH6RU=,iv:zRRfVxD/yRnLNQ2YbarnKGrf6zM8Nkj5PY+cj5XcT8s=,tag:jVyYZlAq+MwMbZTMGpV3CQ==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:fRlhcIOCNrM5QmJau/m6TpayWBCJV+wETRNHXovukYht5rY=,iv:TdDt1MjHO/YdLmVmDvc/51qjXkg9wUzjDth94X7Gbsw=,tag:ZaEYAEr43ZfJEMs5vtipnw==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:J9m2reNpqvhGUTSy37A2pwEUIg==,iv:12Qbg/uyP8cYevPT3OHS+q4lAGN+K8+x/QQmA8zN0G8=,tag:7IoLd4knahVGI1cHIpnpEA==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:ov0EK1V8o8cs14QcKSdUfi4QNqXW,iv:hO9YgiVC1Ct4wHAqXaYJ08BRnCK93kWFlOfILf2e5Ic=,tag:V0R+ApuLRuJzANBgr633Sg==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:qQY/6YcyXp8=,iv:GYU9PHqJ1V877hT2SmCvFi7G4P5Cx98Pi3HGHg7OMXM=,tag:6PQdo4ixH8hirRmhYeTGSA==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:bsWW6+xDejU=,iv:Kds2U7g42rc/YbpRbsh46uiRZtpi2FnCVq3XiTcxQ9k=,tag:GRhJLLjGZYHBM+dNAUpADg==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:un/z3mAVPUnY6b1LEpFZFz1ySWAEawXkngEoqcNy5+VbYkoEX8/50TF87VQjID/TC//ZPv5JbJti7fFpFmbkeA==,iv:ng2kYZJGuGT0s/7k55UzVRlTMn5tSg7a5MPbThTUhgg=,tag:a+pJdcHF7hHV+ba0/C1qnQ==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:DUO+Rgb8+C7gnbBykLsGy60GyNKrC4fMDFnss5sDohHaGj5t5nxJx9oFVeWHO1xVN+GkC0eU10kXjqGQfY5mpg==,iv:9JCkcsj5X80i3o4sr/wLlQF7Emzxfn1JRnajy4grvhI=,tag:Cuwf02o8fUbpXTgCh7ic/Q==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:byS42i9gKMFq,iv:s/7TLV6zgEEmeSnmiZTXVywVWszz6/h2pMsKdTzW50U=,tag:XF2zhTdU29HrXb8PVqSFxA==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:iBblycixObSPvDVRhiBm,iv:C5HxfimsY8iy0VOo+Z2smfVJv4PLtRQ4E1YP5lllfD0=,tag:Jc/j0EKU9cOSVgEZJJpWlA==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:GiuqmVQ6uPbyE4jBwsPxTWYKip4uZpGrfRDG+uuW4ES+z3luok7OEe5pWVhpR5fmg/k=,iv:wP5V37zs/e+g4Vhv592y37XQkE4qkCJFbEFgFXzc/bg=,tag:rtv3yZ/GeF75Ayki/obw4Q==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:CjmonEucypHTctZvCIA=,iv:mN6SIkpKQSy8Fcxm3MB748XXO/0UI8IT6mm/oZGTp8w=,tag:5v3TNFnsgCwLHy9V4f4J8w==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:TIrUaBvO1fr4RJVgEYlPfYx/tGU=,iv:35jRCU/33kCinGfdk+b9rYGU0Di3MyhM8Vnq6810z+A=,tag:qqbexl6MV9T4svlhWdSJaA==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:exjAQW/y+a0=,iv:fjfsZzZOOf5vSL9EoK1x/Vimffhn5EUJmprE4TaCLmU=,tag:0HsQPGpKTdrS/iDQBRodMQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:ky9PJWMryT1ScVjrY4MDydmD42msVSdWpp/uzszOJKLYHDEsHL4=,iv:PfV5Mft5UVSrbnKAN+vUtphUn9FFMtkRZtcyxIIoJVw=,tag:0bDViGBRTn/db9o4rY3dkg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:6qUgjRtqGrY=,iv:j2o+fq2merNqBQfw68W+Fmpz/bs3YR2KDRAQfl+2MYs=,tag:P9SG2YsSEnDRj34NtmvL4Q==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:JeTn6l4aOMmR,iv:66wH5d9H5U0U8odiFuZKrb2eIqDPWyt+f556pAYtMvc=,tag:jtPNMCxeqtLiQOs7KHZRzQ==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:k2bLy0ZMGg==,iv:7B7zQUZwgqhGQ+yF4YSHjmGOg4J33IoACS7GNtoViM4=,tag:7WsrHvLDpvfRGbubZr6JYg==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:zMf7BiTIeM5v,iv:/kVtKEMLBWqKsXE127C37grdTb1QUtNnci4hdz8xd14=,tag:g7K8nVa+7cM/nZd/NNEX3g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlSzR1OE9TMEdwbVpjY2M1
-            bStGbUdKRVdMNTFyVVRMdWE1M3BkeXdkTVhVCm85M3cxSzN4aDU3dkx4UUtZd1VS
-            UkVXV2ZaOW5UZ1Yra2hEZG1hMHJjbncKLS0tICtHZmhiL2RZOGZMbXpGeHRFU2VW
-            cmhOWnVaZDV2KzRrSzRsM0dMVE5YUDAKJht/uVYIHf/WRqtkrwGxXJuIkzk9j05O
-            Y6i9youoaMBV3ZXkBkqpeUgKFyEC9Lbqw3AM8xKam9yP34etVCO2vw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnaloyTnNpSFpWQmdtOVp0
+            Sm9RVE1ISEIwQ2tEdDZZVmlLNldraFVqbWg0CjBucC9tYXR0YWVsZS9UNU5EdkdQ
+            YUhOM2thdjVmcXZEY1Q3L2xvZ01JTTAKLS0tIGptdEs0blhVajU1TkVzL040a0VN
+            KzVVQWc3VlBqbkpCR1QxOFQvRWIvQkEKV08ccWuA8I3GjEGJsNzq0qozTpcz8s2W
+            6QdUpjAO4zqpLXaP2GBHnfUFNo5sf/UNt3LMIsUjJ6/c2W4x8KCZYA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:35:11Z"
-    mac: ENC[AES256_GCM,data:hRHc234n5Bq+MPHI+JhxfgmqvFoJy0XACohEB19kexyMUdRrkGeWzP9KjTHgSVINTK26Ra/KrPeFGIswWzgWW1W/RbLgZqZwgxJflENB/7i6USaUoy3laNoCQLxYgbsw2PmntQj6kLeIETyhhd3lNmPUQjjh8NWgHYA7vSXlJfk=,iv:6dkaI7LQdmDRvMwt7FS+5UqomkYE7gyuy8uuELi2z/M=,tag:mxll1K+8YPWa81mlFvjOpw==,type:str]
+    lastmodified: "2023-02-18T17:19:39Z"
+    mac: ENC[AES256_GCM,data:+L5Lw2sGd/HlzCnxKXMN5MVAm9aL5AY+hWojuTjPvFMlTigwmYhLpg7PCPT4tF/ZBkWhHIrijqTPgyDMKNPYctsAkliTgHi4RIrDFgHan2UwZMF0ySgwRUkb9WJ8d/atHYNGYN2pc+e2KdxjDXz5j5Mv/7ZwGao4CtLXjzku2ss=,iv:d6q0Y3blqlRaq/3Rod4D6i/OIMqbkuoUaRmw/2KQRLM=,tag:1z53iYRfsE9BCoUZ+gbovA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
